--- a/Week 4/Day 1/Dockerfile
+++ b/Week 4/Day 1/Dockerfile
@@ -5,6 +5,9 @@ ENV HOME=/home/user \
     PATH=/home/user/.local/bin:$PATH
 WORKDIR $HOME/app
 COPY --chown=user . $HOME/app
+RUN mkdir -p $HOME/app/data
+RUN mkdir -p $HOME/app/data/vectorstore 
+RUN chown -R user:user $HOME/app/data
 COPY ./requirements.txt ~/app/requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
